Fix B2B: Pré-remplissage items lors modification commande + suppression préfixe 'Produit composé'

--- a/app/templates/b2b/orders/form.html
+++ b/app/templates/b2b/orders/form.html
@@ -938,7 +938,7 @@
                         <div class="col-md-4">
                             <label class="form-label" for="composite-description-${index}">Description</label>
                             <input type="text" name="items-${index}-description" id="composite-description-${index}"
-                                   class="form-control" value="Produit composé: ${name}">
+                                   class="form-control" value="${name}">
                         </div>
                     </div>
                 </div>
